package ar.edu.uba.fi;

public interface Estado {
    Estado colisionar(Pacman p);
}
